--- a/Web Dev/html/form.html
+++ b/Web Dev/html/form.html
@@ -3,9 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Payment form</title>
 </head>
 <body>
-    
+    <form action="">
+        <h1>Payment Form</h1>
+        <h2>Contact Information</h2>
+        <p>Required fields are followed by *</p>
+        <p>Name: * <input type="text" name="name" required></p>
+        <fieldset>
+            <legend>Gender *</legend>
+            <p>
+                Male * <input type="radio" name="gender" id="Male" required>
+                Female * <input type="radio" name="gender" id="Female" required>
+            </p>
+        </fieldset>
+        <p>Address: <textarea name="Address" id="" cols="100" rows="10"></textarea></p>
+        <p>Email: * <input type="email" name="email" id="email" required></p>
+        <p>Pincode: * <input type="number" name="pincode" id="pincode" required></p>
+        <h2>Payment Information</h2>
+        <p>Card Type: *
+            <select name="card_type" id="card_type" required>
+                <option value="">--Select a card type--</option>
+                <option value="Visa">Visa</option>
+                <option value="rupay">rupay</option>
+                <option value="mastercard">mastercard</option>
+            </select>
+        </p>
+        <p>
+            Card Number: * <input type="number" name="card_number" id="card_number" required>
+        </p>
+        <p>
+            Expiration Date: * <input type="date" name="exp_date" id="exp_date" required>
+        </p>
+        <p>CVV * <input type="password" name="CVV" id="CVV" required></p>
+        <input type="submit" value="Pay Now">
+    </form>
 </body>
 </html>
