--- a/Web Dev/html/Project1.html
+++ b/Web Dev/html/Project1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kiran's Workspace</title>
-    <link rel="Stylesheet" href="style.css">
+    <link rel="Stylesheet" href="style1.css">
 </head>
 <body>
     <header>Kiran's Workspace</header>
